tried to oncorporate marcs code

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  line-height: 1.75;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +12,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.learning {
+  background-color:coral;
+}
+
+.familiar {
+  background-color: aquamarine;
+}
+
+.learned {
+  background-color: lightgray;
+}
+
+.word {
+  border: 1px solid rgba(0, 0, 0, 0);
+  padding: 1px;
+  border-radius: 3px;
+}
+
+.word:hover {
+  border-color: blue;
+}
+
+.phrase {
+  border: 1px solid rgba(0, 0, 0, 0);
+  padding: 4px;
+  border-radius: 3px;
+}
+
+.phrase:hover {
+  border-color: red;
+}
+
